UI OrdenDeCompra v2
-Cambio de nombre de atributos DTO para dejarlo igual a las entidades del modelo.
-Validación en los campos de ingreso de datos